# django-task

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
django_task/: __init__.py  admin.py  app_settings.py  apps.py  exceptions.py  forms.py  job.py  jobs.py  models.py  task_command.py  urls.py  utils.py  views.py
django_task/locale/it/LC_MESSAGES/: django.mo  (+1 more)
django_task/management/commands/: delete_all_tasks.py  dump_all_tasks.py  revoke_pending_tasks.py
django_task/migrations/: 0001_initial.py  0002_auto_20180109_0846.py  0003_task_mode.py  0004_task_log_text.py  0005_auto_20180316_1838.py  0006_auto_20180327_1037.py
django_task/static/css/: django_task.css
django_task/static/js/: django_task.js
django_task/templatetags/: django_task_tags.py
django_task/tests/: __init__.py  base_testcase.py  jobs.py  models.py  settings.py  test_task_models.py
docs/: conf.py  index.rst  installation.rst  usage.rst
example/: .gitignore  README.md  README.rst  requirements.txt
example/example/: jobs.py  models.py  settings.py  test_settings.py  urls.py
example/example/migrations/: 0001_initial.py
example/tasks/: admin.py  jobs.py  models.py
example/tasks/migrations/: 0001_initial.py  0002_auto_20191014_1413.py  0003_countbeanstaskthreaded.py  0004_countbeanstask_task_verbosity.py
example/tasks/tests/: base_case.py  test_count_beans.py
example/templates/: base.html
example/templates/django_task/: base.html
tests/: settings.py  test_models.py  urls.py
(+5 files in other folders)
